--- a/assets/templates/index.html
+++ b/assets/templates/index.html
@@ -4,13 +4,12 @@
   <title>SEKT cock</title>
   <meta charset="utf-8">
   <link rel="stylesheet" href="../static/style.css">
-  <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+  <link rel="stylesheet" href="{{ url_for('static', filename='static/style.css') }}">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Tilt+Neon&display=swap" rel="stylesheet">
 </head>
 <body>
-<script> alert("ako stavis emoji, polomit cu ti koljena") </script>
 <div class="container">
 
 <form action="/text" method="post">
