--- a/assets/templates/index.html
+++ b/assets/templates/index.html
@@ -3,8 +3,7 @@
 <head>
   <title>SEKT cock</title>
   <meta charset="utf-8">
-  <link rel="stylesheet" href="../static/style.css">
-  <link rel="stylesheet" href="{{ url_for('static', filename='static/style.css') }}">
+  <link rel="stylesheet" href="{{ url_for('static', filename='./style.css') }}">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Tilt+Neon&display=swap" rel="stylesheet">
