--- a/assets/static/style.css
+++ b/assets/static/style.css
@@ -4,9 +4,7 @@ body {
     font-family: 'Tilt Neon', sans-serif;
 }
 .container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    margin: auto 2rem;
     height: 100vh;
     font-size: 24px;
     color: orange;
